--- a/src/ui/components/EventLogPanel.css
+++ b/src/ui/components/EventLogPanel.css
@@ -165,6 +165,11 @@
   box-shadow: none;
 }
 
+.aoEventLogDateCell:disabled {
+  cursor: not-allowed;
+  opacity: 0.35;
+}
+
 .aoEventLogDateCell.is-out {
   opacity: 0.45;
 }
